--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=7.4",
         "zf-commons/zfc-user": "*",
-        "doctrine/doctrine-orm-module": "~1.0"
+        "doctrine/doctrine-orm-module": "^5.0 || ^6.0"
     },
     "autoload": {
         "psr-0": {
